[package]
name = "ecoz2"
version = "0.3.34"
authors = [
    "Carlos A. Rueda <carueda@mbari.org>",
]
description = "Linear Predictive Coding Vector Quantization and Hidden Markov Modeling for Pattern Recognition"
repository = "https://github.com/ecoz2/ecoz2rs"
license = "MIT OR Apache-2.0"
keywords = [
    "hmm",
    "hidden-markov-model",
    "linear-prediction",
    "vector-quantization",
    "machine-learning",
]

#edition = "2018"

# https://doc.rust-lang.org/cargo/reference/build-scripts.html
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]

csv = "1.1"
hound = "3.4.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
libc = "0.2.62"
num_cpus = "1.0"
paw = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
structopt = { version = "0.3", features = [ "paw" ] }
walkdir = "2.3.1"

[dependencies.openmp-sys]
features = ["static"]
version = "0.1.7"

# https://stackoverflow.com/a/34054833/830737
[profile.dev]
opt-level = 3

[dev-dependencies]
criterion = "0.3"
openmp-sys = { version = "0.1.7", features = ["static"] }

[[bench]]
name = "my_benchmark"
harness = false
