[package]
name = "ecoz2"
version = "0.7.1"
authors = [
    "Carlos A. Rueda <carueda@mbari.org>",
]
description = "Linear Predictive Coding Vector Quantization and Hidden Markov Modeling for Pattern Recognition"
repository = "https://github.com/mbari-org/ecoz2rs"
license = "MIT OR Apache-2.0"
keywords = [
    "hmm",
    "hidden-markov-model",
    "linear-prediction",
    "vector-quantization",
    "machine-learning",
]

edition = "2018"

# https://doc.rust-lang.org/cargo/reference/build-scripts.html
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]

assert_approx_eq = "1.1.0"
attohttpc = { version = "0.25.0", features = ["json"] }
byteorder = "1.3.4"
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
csv = "1.1"
hound = "3.4.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
libc = "0.2.62"
ndarray = { version = "0.13.1", features = ["serde"] }
num_cpus = "1.0"
rand = "0.8.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.53"
serde-pickle = "0.6"
walkdir = "2.3.1"

# "Static linking is recommended on macOS"
[target.'cfg(target_os = "macos")'.dependencies.openmp-sys]
version = "1.0.0"
features = ["static"]

[target.'cfg(target_os = "linux")'.dependencies.openmp-sys]
version = "1.0.0"

# "Static linking is recommended on macOS"
[target.'cfg(target_os = "macos")'.dev-dependencies]
openmp-sys = { version = "1.0.0", features = ["static"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
openmp-sys = "1.0.0"


# https://stackoverflow.com/a/34054833/830737
[profile.dev]
opt-level = 3

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
