[package]
name = "hmm"
version = "0.1.0"

[dependencies]

structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"

ecoz2_lib = { path = "../ecoz2_lib", version = "0.1.0" }
prd = { path = "../prd", version = "0.1.0" }
utl = { path = "../utl", version = "0.1.0" }

libc = "0.2.62"
